src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  background-color: rgb(255, 255, 246);
}

.card {
  padding: 1em;
  margin: 1em;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
  border-radius: 20px;
}

.card li {
  cursor: pointer;
  list-style: circle;
}

.card ul,
form {
  display: flex;
  flex-direction: column;
  align-items: start;
}

form {
  justify-content: center;
  gap: 3px;
}

input,
select {
  margin-top: 3px;
  background-color: rgb(0, 204, 255);
  color: white;
  font-weight: bolder;
  border: none;
  border-radius: 5px;
  padding: 10px;
  width: 100%;
}

select {
  background-color: rgb(180, 180, 180);
  color: rgb(0, 0, 0);
}

